--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,10 +7,8 @@ output:
 
 
 ## Loading and preprocessing the data
-##### 1. Loading requisite libraries if they don't already exist
-```{r, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
-
-#Install "ggplot2", "scales", and Hmisc packages if they are not already installed
+##### 1. Installing and loading requisite libraries if they don't already exist
+```{r, results='hide', warning=FALSE, message=FALSE}
 
 if (!("ggplot2" %in% rownames(installed.packages())) ) {
   install.packages("ggplot2")
@@ -31,17 +29,12 @@ if (!("Hmisc" %in% rownames(installed.packages())) ) {
 }
 ```
 
-##### 2. Unzipping then loading the given activity data using read.csv().  (results = 'markup' displays the output.  warning=TRUE and message=TRUE ensure warnings and messages are also displayed.)
+##### 2. Unzipping, then loading the given activity data using read.csv().  
 ```{r, results='markup', warning=TRUE, message=TRUE}
 if(!file.exists('activity.csv')){
     unzip('activity.zip')
 }
 given_activity_data <- read.csv('activity.csv')
-```
-
-##### 3. Reformatting the time data into Hour-Minute format to suit the analysis.  Commenting out code below as it results in an "Error in complete.cases(by) : invalid 'type' (list) of argument" error later.
-```{r}
-#given_activity_data$interval <- strptime(gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", given_activity_data$interval), format='%H:%M')
 ```
 
 -----
